# powder_grinding

./: .gitignore  .rosinstall  BUILD-DOCKER-IMAGE.sh  LICENSE.txt  Memo_for_cobotta_demo.md  README.md  README_jp.md  RUN-DOCKER-CONTAINER.sh  calibrate_log.txt  joint_limits.yaml  requirements.txt
catkin_ws/: BUILD_ROS_WORKSPACE.sh  INITIAL_SETUP_ROS_ENVIROMENTS.sh
catkin_ws/src/grinding_force_torque/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/grinding_force_torque/launch/: abs_force.launch  leptrino.launch  wrench_statistics.launch
catkin_ws/src/grinding_force_torque/scripts/: abs_force_publisher.py  ft_filter.py  wrench_statistics.py
catkin_ws/src/grinding_motion_routines/: CMakeLists.txt  README_action.md  package.xml
catkin_ws/src/grinding_motion_routines/config/UR5e_grinding_room_903/: 20231208_155818_calibration_result.txt  calibration_config.yaml  motion_config.yaml  planning_scene_config.yaml
catkin_ws/src/grinding_motion_routines/config/UR_grinding_demo/: motion_config.yaml  move_config.yaml  planning_scene_config.yaml  planning_scene_config_sound_sensor.yaml
catkin_ws/src/grinding_motion_routines/config/calibrate_mortar_position/: calibration_config.yaml  motion_config.yaml  planning_scene_config.yaml
catkin_ws/src/grinding_motion_routines/config/cobotta_grinding_demo/: motion_config.yaml  move_config.yaml  planning_scene_config.yaml
catkin_ws/src/grinding_motion_routines/config/dynamixel/: spoon.yaml
catkin_ws/src/grinding_motion_routines/config/ur3e_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
catkin_ws/src/grinding_motion_routines/config/ur5e_grinding_demo/: motion_config.yaml
catkin_ws/src/grinding_motion_routines/launch/: ICRA2023_vison_grinding.launch  calibrate_mortar_position.launch  cobotta_grinding_demo.launch  demo.launch  load_planning_scene.launch  mechano_grinding_fast.launch  mortar_position_fine_tuning.launch  run_dynamixel.launch  ur3e_grinding_demo.launch  ur5e_grinding_demo.launch
catkin_ws/src/grinding_motion_routines/scripts/: IROS2022_circle_VS_spiral.py  IROS2022_circle_VS_spiral_with_gathering.py  IROS2022_grinding_cobotta.py  IROS2023_vision_grinding.py  calibrate_mortar_position.py  goto_mortar_calib_pose.py  grinding_demo.py  grinding_fast.py  mechano_grinding_fast.py  mortar_position_fine_tuning_by_force.py  motion_test.py  subscribe_wrench.py  test_executor.py  ur_grinding_demo.py  wrench_statistics.py
catkin_ws/src/grinding_motion_routines/src/grinding_motion_routines/: load_planning_scene.py  motion_generator.py  motion_primitive.py  moveit_executor.py  tf_publisher.py
catkin_ws/src/grinding_motion_routines/src/kek_routines/: JTC_executor.py  moveit_executor.py
catkin_ws/src/grinding_motion_routines/srv/: PositionCalibrateVector.srv
catkin_ws/src/grinding_vision/: CMakeLists.txt  README.md  package.xml  realsense_default_presets.json  realsense_rgb_parasm  setup.py
catkin_ws/src/grinding_vision/config/: 20230905_camera_calibration_joint_states.yaml  20230905_camera_calibration_samples.yaml  mortar_position_detector.yaml
catkin_ws/src/grinding_vision/launch/: ar_track.launch  diagonal_vision.launch  grinding_vision.launch  img_export.launch  mortar_position_detector.launch  publish_caliblated_camera_pose.launch  publish_point_cloud.launch  yolo8.launch
catkin_ws/src/grinding_vision/scripts/: convert_camera_coordinate_to_robot_coordinate.py  diagonal_vision.py  mortar_image_correction.py  mortar_position_estimater.py  mortar_position_estimator.py  pixel_to_3D_coordinates.py  pixel_to_3d_position.py  powder_detector.py  realsense_3D_coordinates.py  test_realsense_distance.py  vision.py
catkin_ws/src/grinding_vision/src/grinding_vision/: pixel_to_3d_position.py  realsense_coordinate_converter.py  transform_to_robot_frame.py
catkin_ws/src/grinding_vision/srv/: DiagonalPowderRadius.srv  MortarCenter.srv  PowderPos.srv
cobotta-by-python/: cobotta_manual_operation.ipynb
cobotta_control_by_python/: cobotta_controller.py  cobotta_controller_gui.py  cobotta_manual_operation.ipynb
docker/: BUILD-DOCKER-IMAGE.sh  Dockerfile  README.md  README_jp.md  compose.yaml  docker-compose.yml  ros-noetic-desktop.sh
env/: BUILD-DOCKER-IMAGE.sh  LAUNCH-TERMINATOR-TERMINAL.sh  RUN-DOCKER-CONTAINER.sh
grinding_descriptions/: CMakeLists.txt  README.md  setup.py
grinding_force_torque/: CMakeLists.txt
grinding_gazebo/: package.xml
grinding_motion_routines/: CMakeLists.txt  README.md  README_jp.md  package.xml  setup.py
grinding_motion_routines/config/calibrate_mortar_position/: calibration_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/cobotta_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/cobotta_pro_900_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/fr3_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/uf850_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/ur3e_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/config/ur5e_grinding_demo/: motion_config.yaml  planning_scene_config.yaml
grinding_motion_routines/doc/: epicycloid_visualizer.html  motion_config.yaml
grinding_motion_routines/launch/: cobotta_grinding_demo.launch  cobotta_grinding_demo_with_GUI copy.launch  cobotta_pro_900_grinding_demo.launch  fr3_grinding_demo.launch  uf850_grinding_demo.launch  ur3e_grinding_demo.launch  ur5e_grinding_demo.launch  ur5e_grinding_demo_with_GUI.launch
grinding_motion_routines/scripts/: calibrate_mortar_position.py  cobotta_grinding_demo.py  cobotta_grinding_demo_with_GUI.py  fr_grinding_demo.py  grinding_demo.py  grinding_demo_with_GUI.py  motion_test.py  ur_grinding_demo.py
grinding_motion_routines/src/grinding_motion_routines/: JTC_executor.py  arm.py  constants.py  controllers.py  conversions.py  filters.py  marker_display.py  motion_generator.py  motion_primitive.py  moveit_executor.py  spalg.py  tf_publisher.py  utils.py
(+314 files in other folders)
