<?xml version="1.0"?>
<package>
  <name>grinding_vision</name>
  <version>0.0.0</version>
  <description>The grinding_vision package</description>

  <maintainer email="yusaku_nakajima@ap.eng.osaka-u.ac.jp">Yusaku Nakajima</maintainer>

  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>realsense2_camera</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>realsense2_camera</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <run_depend>message_runtime</run_depend>


</package>